// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeListItem /> Should correctly render recipe 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <div
    aria-label="favorite"
    className="mr1 animated inline-block"
    onClick={[Function]}
    role="img"
  >
    ⬜️
  </div>
  <span>
    Test Recipe
  </span>
  <span>
    Test category
  </span>
</li>
`;

exports[`<RecipeListItem /> Should not break if no recipe passed 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <div
    aria-label="favorite"
    className="mr1 animated inline-block"
    onClick={[Function]}
    role="img"
  >
    ⬜️
  </div>
  <span />
  <span />
</li>
`;

exports[`<RecipeListItem /> Should render favorited state 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <div
    aria-label="favorite"
    className="mr1 animated inline-block"
    onClick={[Function]}
    role="img"
  >
    ✅
  </div>
  <span>
    Test Recipe
  </span>
  <span>
    Test category
  </span>
</li>
`;
